# rrpg

./: .gitignore  Cargo.toml  README.md
assets/beatmap/: the_shadows.ron
assets/beatmaps/: stop_breathing.ron  the_shadows.ron  turning_up_the_heat.ron
assets/shaders/: slider_material_2d.wgsl
src/: effect.rs  lib.rs  main.rs  state.rs
src/audio/: asset.rs  mod.rs  source.rs
src/rhythm/: asset.rs  input.rs  judgement.rs  mod.rs  note.rs  render.rs
